--- a/app/RFQ_Components/Trucking_FTL/TruckingFTL.html
+++ b/app/RFQ_Components/Trucking_FTL/TruckingFTL.html
@@ -67,26 +67,40 @@
       <input id="pol_discharge" type="text" placeholder="POL Port of Discharge" class="form-control mb-3" formControlName="POD_Port_of_Discharge">
     </div>
 
-    <!-- Nested Items -->
-    <div formGroupName="child">
+    <div class="childs">
       <div class="items">
-        <div class="form-group">
-          <h3>Create Items</h3>
-          <div>
-            <label>Net Weight</label>
-            <input class="form-control" type="number" formControlName="Net_Weight" placeholder="Net Weight">
-          </div>
-          <div>
-            <label>Gross Weight</label>
-            <input class="form-control" type="number" formControlName="Gross_Weight" placeholder="Gross Weight">
-          </div>
-          <div>
-            <label>Number Of Trucks</label>
-            <select class="form-control mb-3" formControlName="Number_of_Trucks">
-              <option *ngFor="let item of choose_truck_or_shipment" [ngValue]="item">{{ item }}</option>
-            </select>
-          </div>
-        </div>
+        <table class="table table-hover">
+            <thead>
+              <tr>
+                <th scope="col">Net Weight</th>
+                <th scope="col">Gross Weight</th>
+                <th scope="col">Truck Type</th>
+                <th scope="col">Number of Trucks</th>
+                <th scope="col">Add</th>
+              </tr>
+            </thead>
+            <tbody>
+              <tr class="child-form" formGroupName="child">
+                <td>
+                  <input class="form-control" type="number" formControlName="Net_Weight" placeholder="Net Weight">
+                </td>
+                <td>
+                  <input class="form-control" type="number" formControlName="Gross_Weight" placeholder="Gross Weight">
+                </td>
+                <td>
+                  <select class="form-control" formControlName="Truck_Item_Type">
+                    <option *ngFor="let type of truck_item_types">{{ type }}</option>
+                  </select>
+                </td>
+                <td>
+                  <input class="form-control" type="number" formControlName="Number_of_Trucks" />
+                </td>
+                <td>
+                  <button id="1" type="button" class="add-btn btn btn-primary">+</button>
+                </td>
+              </tr>
+            </tbody>
+        </table>
       </div>
     </div>
 
