--- a/app/RFQ_Components/Domestic_Trucking/DomesticTrucking.html
+++ b/app/RFQ_Components/Domestic_Trucking/DomesticTrucking.html
@@ -16,16 +16,9 @@
       </select>
     </div>
 
-    <div *ngIf="choose_truck.value.slice(3) === 'Choose Your Truck'" class="mt-2">
-      <label>Truck Type</label>
-      <select class="form-control mb-3" formControlName="Truck_Type">
-        <option *ngFor="let truck of truck_types" [ngValue]="truck">{{ truck }}</option>
-      </select>
-    </div>
-
-    <div *ngIf="choose_truck.value.slice(3) === 'Choose Your Truck'" class="mt-2">
+    <div *ngIf="choose_truck.value.slice(3) === 'Choose your truck'" class="mt-2">
       <label for="Number_of_Trucks">Number of Trucks</label>
-      <input id="Number_of_Trucks" type="number" formControlName="Number_of_Trucks" class="form-control mb-3">
+      <input id="Number_of_Trucks" type="number" formControlName="Number_of_Trucks" placeholder="Number of Trucks" class="form-control mb-3">
     </div>
 
     <div>
@@ -47,22 +40,39 @@
 
     <!-- Nested Items -->
     <div class="childs">
-      <select #choose_truck (change)="showResults(choose_truck.value)" class="form-control" formControlName="Choose_Truck_or_Enter_Shipment_Details">
-        <option *ngFor="let truck of choose_trucks" [ngValue]="truck">{{truck}}</option>
-      </select>
-
-      <div class="items">
+      <!-- Shipment Details -->
+      <div *ngIf="choose_truck.value.slice(3) === 'Enter Shipment Details'" class="items">
         <table class="table table-hover">
             <thead>
               <tr>
-                <th scope="col">Number of Containers</th>
+                <th scope="col">Quantity</th>
+                <th scope="col">Length (cm)</th>
+                <th scope="col">Width (cm)</th>
+                <th scope="col">Height (cm)</th>
+                <th scope="col">Net Weight (kg)</th>
+                <th scope="col">Gross Weight (kg)</th>
                 <th scope="col">Add</th>
               </tr>
             </thead>
             <tbody>
               <tr class="child-form" formGroupName="child">
                 <td>
-                  <input class="form-control" type="number" formControlName="Number_of_Containers" placeholder="Number of Containers">
+                  <input class="form-control" type="number" formControlName="Quantity" placeholder="Quantity">
+                </td>
+                <td>
+                  <input class="form-control" type="number" formControlName="Length" placeholder="Length (cm)">
+                </td>
+                <td>
+                  <input class="form-control" type="number" formControlName="Width" placeholder="Width_cm">
+                </td>
+                <td>
+                  <input class="form-control" type="number" formControlName="Height" placeholder="Height_cm">
+                </td>
+                <td>
+                  <input class="form-control" type="number" formControlName="Net_Weight" placeholder="Net_Weight_kg">
+                </td>
+                <td>
+                  <input class="form-control" type="number" formControlName="Gross_Weight" placeholder="Gross_Weight_kg">
                 </td>
                 <td>
                   <button id="1" type="button" class="add-btn btn btn-primary">+</button>
