--- a/app/SP_Components/SP_Storage/SPStorage.html
+++ b/app/SP_Components/SP_Storage/SPStorage.html
@@ -1,4 +1,4 @@
-<div *ngIf="getParam.get('service_type') === title" class="col-lg-12">
+<div class="col-lg-12">
   <form #formElem="ngForm" [formGroup]="this.formGroup" (ngSubmit)="createQuotation(formElem.value)">
     <div class="form-group">
       <div class="row">
@@ -45,6 +45,6 @@
       </div>
       </div>
     </div>
-    <input type="submit" class="btn btn-primary">
+    <input type="submit" class="btn btn-primary" value="Submit">
   </form>
 </div>
