--- a/app/RFQ_Components/Clearance/Clearance.html
+++ b/app/RFQ_Components/Clearance/Clearance.html
@@ -1,4 +1,4 @@
-<form [formGroup]="this.formGroup" #createRfq="ngForm" class="p-4" (ngSubmit)="createRFQ(createRfq.value)">
+<form enctype="multipart/form-data" [formGroup]="this.formGroup" #createRfq="ngForm" class="p-4" (ngSubmit)="createRFQ(createRfq.value)">
   <div class="form-group">
     <div>
       <label for="commodity">Commodity</label>
